src/objects/Opportunity_Snapshots__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppTx_SOW_Delivered_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AppTx SOW Delivered to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppTx_Scoping_Scheduled__c</fullName>
        <label>AppTx Scoping Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apps_Greenfield__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apps-Greenfield</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apps_Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apps-Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloud_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloud Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Containers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Containers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <label>Forecast Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infra_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infra &amp; Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Last_Update__c</fullName>
        <label>Next Steps Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Area__c</fullName>
        <label>Opp Area</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Region__c</fullName>
        <label>Opp Region</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Theater__c</fullName>
        <label>Opp Theater</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCFS_SOW_Delivered_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCFS SOW Delivered to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCFS_Scoping_Scheduled_Date__c</fullName>
        <label>PCFS Scoping Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_All_Services__c</fullName>
        <label>Total: All Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_App_Tx__c</fullName>
        <label>Total: App Tx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_ACV__c</fullName>
        <label>Total: Forecasted ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PCF_SBSC__c</fullName>
        <label>Total: PCF SBSC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PCF_Services__c</fullName>
        <label>Total: PCF Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Snapshot</label>
    <nameField>
        <displayFormat>OppSnap-{000000}</displayFormat>
        <label>Opportunity Snapshots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>